HEAD only (unreleased)

  New Features

    - CMFDefault.MetadataTool:  support arbitrary additional schemas.
      The "stock" DublinCore-specific API is still accessible, implemented
      via a special "DCMI" subobject.

    - WorkflowTool and DCWorkflow: Improved add form for workflow objects.
      Presettings can now be loaded from workflow settings in setup profiles.
      This replaces the feature that did allow to load presettings from the
      oldstyle workflow factories registry.

    - WorkflowTool: Switched to generic plug-in mechanism for workflows.
      Any class registered for IWorkflowDefinition can now be used in the
      WorkflowTool.

    - DCWorkflow: Added 'revision2' profile.
      This replaces the hardcoded 'Revision 2' default workflow.

    - CMFActionIcons, CMFCalendar, CMFDefault, CMFTopic, CMFUid:
      use the new 'for_' argument in GenericSetup's profile registry API
      to indicate that profiles are intended for CMFCore's ISiteRoot sites.

    - CMFTopic:  added specialized GenericSetup support for topics, to
      allow capturing criteria in a single XML file.

    - CMFDefault and CMFTopic: Split off CMFTopic profile.
      CMFTopic support is now configured by an optional extension profile.
      CMFDefault no longer depends on CMFTopic.

    - TypesTool: Improved add form for type info objects.
      Presettings can now be loaded from type info settings in setup profiles.
      This replaces the feature that did allow to load presettings from
      registered (oldstyle) fti data.

    - CMFCore.CachingPolicyManager: Caching policies can now control all the 
      Cache-Control tokens defined in the HTTP 1.1 spec (s-maxage, public, 
      private, no-transform).  When no-cache is enabled, a Pragma: no-cache 
      header is also sent for HTTP 1.0 clients. Thanks go to Geoff Davis
      for contributing the necessary patches.

    - ActionsTool: Improved add form for 'CMF Action' objects.