@@ -2,6 +2,9 @@ HEAD only (unreleased)
 
   New Features
 
+    - FSFile: autodetect the encoding of UTF-8 text files with a
+      suitable Byte Order Mark (0xEF 0xBB 0xBF).
+
     - CMFDefault.MetadataTool:  support arbitrary additional schemas.
       The "stock" DublinCore-specific API is still accessible, implemented
       via a special "DCMI" subobject.
